<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_width="198dp"
        android:layout_height="36dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/title_home"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="295dp"
        android:layout_height="89dp"
        android:text="@string/indicaciones"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="58dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="283dp"
        android:layout_height="63dp"
        android:text="@string/letraMisteriosa"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonComprueba"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="335dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCambio"
        tools:layout_editor_absoluteX="111dp"
        tools:layout_editor_absoluteY="393dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonInicio"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="155dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="161dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="112dp"
        tools:layout_editor_absoluteY="281dp" />

</android.support.constraint.ConstraintLayout>